Quorum/Library/Tests/TypeCheckerGenerated/Pass/RetAssignIntegerInteger.quorum
class Main
    action Main
        integer v = Test()
        if v = 5
            output "passed"
        end
    end

    action Test() returns integer
        integer var = 5
        return var
    end
end