Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextNumObjField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        Number var
        var:SetValue(5.0)
        return var
    end
end